[package]
name = "strest"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.4", features = ["derive"] }
async-trait = "0.1"
serde_json = "1"
ansi_term = "0.12.1"
crossterm = "0.27.0"
ratatui = "0.23.0"

